compiler-core/src/parse/snapshots/gleam_core__parse__tests__const_string_concat_naked_right.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\nconst no_cute_bee = \"cute\" <>\n"
---
----- SOURCE CODE

const no_cute_bee = "cute" <>


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:28
  │
2 │ const no_cute_bee = "cute" <>
  │                            ^^ This operator has no value on its right side

Hint: Remove it or put a value after it.
